--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "typeorm": "ts-node ./node_modules/typeorm/cli.js"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^22.10.10",
     "@typescript-eslint/eslint-plugin": "^8.21.0",
     "@typescript-eslint/parser": "^8.21.0",
@@ -27,6 +28,7 @@
     "@types/cors": "^2.8.17",
     "@types/joi": "^17.2.3",
     "D": "^1.0.0",
+    "bcryptjs": "^2.4.3",
     "celebrate": "^15.0.3",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.2",
