--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.8",
     "@types/node": "^22.10.10",
     "@typescript-eslint/eslint-plugin": "^8.21.0",
     "@typescript-eslint/parser": "^8.21.0",
     "eslint": "^9.19.0",
     "eslint-config-prettier": "6.15.0",
     "eslint-plugin-prettier": "3.2.0",
+    "jsonwebtoken": "^9.0.2",
     "prettier": "^3.4.2",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
@@ -30,6 +32,7 @@
     "D": "^1.0.0",
     "bcryptjs": "^2.4.3",
     "celebrate": "^15.0.3",
+    "express-async-errors": "^3.1.1",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.2",
     "typeorm": "0.2.29"
